Release Notes

* 1/19/2016
  * changed AtlasPP to set lifetime to failed log datasets 
  * fixed getAnalSitesWithData to ignore STAGING

* 1/18/2016
  * changed getScoutJobData to reduce baseWalltime when calculating cpuTime
  * changed TR to respect the boolean vale for failWhenGoalUnreached

* 1/15/2016
  * changed message type for WORLD taskbrokerage
  * setting maxWalltime to maxCpuCount for HS06
  * changed AtlasPJB to support 3 digits base releases

* 1/14/2016
  * changed setScoutJobData so that tasks go to exhausted when execution time is unexpectedly too long
  * removed TiersOfATLAS from AtlasDDM

* 1/5/2016
  * changed restartTasksForCF to restart ready tasks with defined DSs

* 12/31/2015
  * fixed CF to use nFilesForScout for toupdate in scouting

* 12/16/2015
  * changed restartTasksForCF to restart defined tasks with only ready DSs

* 12/15/2015
  * using roundi up for the brokerage as well
  * added protection against nFilesPerJob=0 and nEventsPerJob=0

* 12/9/2015
  * rounding up job.minramcount with 500MB chunks

* 12/8/2015
  * fixed PP to go finished instead of exhausted if goal is reached
  * changed AtlasPJB to send pmerge to anywhere after 24h

* 12/7/2015
  * removed validationrelease from AtlasPJB
  * enabled duplication check for production

* 11/27/2015
  * fixed for reassignTask not to make subscriptions for distributed datasets 
  * removed offet for zero events in getEffectiveNumEvents

* 11/23/2015
  * added updateJobMetrics
  * fixed nEventsPerMergeJob

* 11/19/2015
  * changed AtlasPP to delete empty datasets
  * fixed AtlasPTB for WORLD + no output
  * changed getScout to ignore jobs with nEvents<10

* 11/18/2015
  * fixed AtlasPTB for WORLD

* 11/16/2015
  * changed getScout to fill IO info

* 11/13/2015
  * fixed AtlasPTB for negative t1Weight in WORLD
  * changed AtlasPTB for all prod jobs to respect fairsharepolicy 

* 11/11/2015
  * fixed AtlasPTB for missing nuclei in RW